0.17.4
 - fix: correctly handle dataset IDs and names in `DBExtract`
 - fix: `get_datasets_user_shared` failed when many circles/collections exist
 - enh: allow to disable update check on startup via settings
 - enh: apply button in upload settings only affects cache location
 - enh: move "apply" button in downloads settings next to "browse" button
 - ref: decorate PyQtSlots
 - tests: restore previous users settings after testing
0.17.3
 - fix: drag'n'drop to DCscope broken since 0.17.0 (#88)
 - fix: show long resource names with elide-middle and tool tip (#89)
 - fix: error message dialog limited to traceback length of three
 - fix: copy error text to clipboard did not work in error message dialog
 - enh: allow specifying collections in upload task files and via the API
 - docs: increase warning threshold for max number of resources to 1000
   (CKAN 2.11.3 handles datasets with many resources much better)
0.17.2
 - fix: not all resource name edits were recognized in upload dialog (#84)
 - fix: check for existence of DC resources before starting uploads (#85)
 - enh: functionalize resource name reset button (#84)
 - enh: sort resources according to internal basin dependencies (#79)
 - enh: warn user about too many resources in a dataset (#86)
 - reg: do not always add directory name to resource name in upload dialog
 - ref: use more f-strings
 - ref: add `common.is_dc_file` for consistent resource checks
0.17.1
 - fix: found culprit of regular segmentation faults (#14)
 - reg: invalid use PyQt6 namespace after migration from PyQt5
0.17.0
 - BREAKING CHANGE: migrate codebase from PyQt5 to PyQt6
 - fix: automated user sign-up did not work for DCOR Playground
 - enh: detect DCOR maintenance mode
 - tests: allow to use different DCOR instance for testing
 - tests: make tests independent of testing user
0.16.11
 - fix: support CKAN 2.11 (authorization and status_show)
 - fix: implement non-functional `DownloadQueue.get_status`